push parziale della grafica